Fixed style on mobile

--- a/src/app/pages/Trivia/components/Modal/index.scss
+++ b/src/app/pages/Trivia/components/Modal/index.scss
@@ -1,6 +1,6 @@
 .ReactModal {
   &__Overlay {
-    width: 1020px;
+    max-width: 1020px;
     max-height: 350px;
     margin: 0 auto;
     position: absolute;
